--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "multi-range-slider-react": "^2.0.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
